# EventsBot

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.production  INFRASTRUCTURE.md  PRODUCT.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  events_bot_dump.sql  pyproject.toml  requirements.txt  test_aiogram.py  test_auth.py  test_eval.js  test_friends.py  test_models.py  update_cache.py
backend/: SUPERAPP_BRIDGE.md  alembic.ini  pyproject.toml
backend/alembic/: script.py.mako
backend/alembic/versions/: 20260430_0001_create_initial_tables.py  20260524_0001_add_event_public_tokens_and_analytics.py  20260527_0001_event_filter_indexes.py  20260601_0001_add_user_language.py  20260601_0002_merge_user_language.py  20260602_0001_event_sync_jobs.py  20260604_0001_chat_bot_id.py  20260606_0001_friends_system.py  20260607_0001_restore_chat_lookup_indexes.py  20260623_0001_add_unique_constraints_to_code_tables.py  20260623_0002_verified_at_and_analytics_check.py  20260703_0001_simplify_roles.py  20260704_0001_add_resubmitted_status.py  20260706_0001_add_superapp_user_id.py  20260707_0001_events_creator_index.py  20260719_0001_event_submission_idempotency.py  20260721_0001_add_poster_storage_message_id.py  446f4fb058de_add_unique_constraint_to_comments.py  4fa4d16a7030_add_parent_event_id.py  5ae7877410de_add_event_rating_columns.py  62e973abeaa4_add_event_end_time.py  64dd155ec500_add_it_equipment_materials_to_events.py  (+2 more)
backend/app/: __init__.py  config.py  localization.py  main.py
backend/app/db/: redis.py  (+1 more)
(+366 files in other folders)
