[project]
name = "events-bot"
version = "0.1.0"
description = "Student Events Bot"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4.0",
  "alembic>=1.13,<2.0",
  "asyncpg>=0.30,<1.0",
  "bcrypt>=4.0,<5.0",
  "fastapi>=0.115,<1.0",
  "greenlet>=3.0,<4.0",
  "Pillow>=10.0,<11.0",
  "PyJWT>=2.8,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
  "redis>=5.0,<6.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "anyio>=4.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
